# passrs

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  TODO.md  build.rs  default.nix  flake.nix  rustfmt.toml  shell.nix  test.sh
.github/workflows/: ci.yml
completions/: passrs.bash  passrs.fish  passrs.zsh
nix/: sources.json
src/: cli.rs  clipboard.rs  config.rs  consts.rs  error.rs  event.rs  fuzzy.rs  lib.rs  main.rs  otp.rs  search.rs  subcmds.rs  tree.rs  ui.rs  util.rs  utils.rs
src/subcmds/: cp.rs  edit.rs  find.rs  generate.rs  git.rs  grep.rs  init-old.rs  init.rs  insert.rs  ls.rs  mod.rs  mv.rs  rm.rs  show.rs  unclip.rs  zzinit.rs
src/subcmds/otp/: append.rs  code.rs  insert.rs  mod.rs  uri.rs  validate.rs
tests/: passrs@testuser.public.asc  passrs@testuser.secret.asc  util.rs
tests/gnupg/: pubring.kbx  trustdb.gpg
tests/gnupg/private-keys-v1.d/: 39FC90BC110E07B57640287A59C314C3A0D2ED69.key  45BBB771512CA44F3FAF012AA1F327DE7BA96056.key
tests/test_repo/: .gitattributes  .gpg-id  A.gpg  Xgh.gpg  a.gpg  b.gpg  c.gpg  d.gpg  e.gpg  f.gpg  xkl.gpg
