[package]
name = "pass-rs"
version = "0.1.0"
edition = "2018"
authors = ["Cole Helbling <cole.e.helbling@outlook.com>"]
description = "A crabby rewrite of `pass`, the standard unix password manager"
license = "MIT"
repository = "https://github.com/cole-h/pass-rs"
documentation = "https://docs.rs/pass_rs"
readme = "README.md"
categories = ["command-line-interface"]
keywords = ["cli", "password"]
build = "build.rs"
publish = false

[lib]
path = "src/lib.rs"
doctest = true

[[bin]]
name = "passrs"
path = "src/main.rs"
doctest = false

[dependencies]
anyhow = "1.0.0"
data-encoding = "2.1.0"
git2 = { version = "0.11.0", default-features = false }
gpgme = "0.9.0"
grep-printer = { version = "0.1.0", default-features = false }
grep-regex = "0.1.0"
grep-searcher = "0.1.0"
libc = "0.2.0"
once_cell = "1.3.0"
psutil = "1.7.0"
ring = { version = "0.16.0", default-features = false }
structopt = { version = "0.3.0", default-features = false }
termcolor = "1.0.0"
termion = "1.5.0"
thiserror = "1.0.0"
tui = "0.8.0"
walkdir = "2.2.0"

qrcode = { version = "0.11.0", default-features = false, optional = true }
regex = { version = "1.3.0", default-features = false, optional = true }

[build-dependencies]
rustc_tools_util = "0.2.0"

[features]
default = ["otp"]
otp = ["regex", "qrcode"]

[profile.release]
debug = false
lto = true
