[package]
name = "passrs"
version = "0.1.0"
edition = "2018"
authors = ["Cole Helbling <cole.e.helbling@outlook.com>"]
description = "A crabby rewrite of `pass`, the standard unix password manager"
license = "MIT"
repository = "https://github.com/cole-h/passrs"
documentation = "https://docs.rs/passrs"
readme = "README.md"
categories = ["command-line-interface"]
keywords = ["cli", "password"]
build = "build.rs"
publish = false

[lib]
path = "src/lib.rs"

[[bin]]
name = "passrs"
path = "src/main.rs"
doctest = false

[dependencies]
anyhow = "1.0.28"
clap = { version = "3.0.0-beta.1", default-features = false, features = ["std", "cargo", "derive"] }
data-encoding = "2.2.0"
git2 = { version = "0.13.1", default-features = false }
gpgme = "0.9.2"
grep-printer = { version = "0.1.4", default-features = false }
grep-regex = "0.1.7"
grep-searcher = "0.1.7"
libc = "0.2.68"
once_cell = "1.3.1"
psutil = { version = "3.0.1", default-features = false, features = [ "process" ] }
ring = { version = "0.16.12", default-features = false }
termcolor = "1.1.0"
termion = "1.5.5"
thiserror = "1.0.14"
tui = "0.9.3"
walkdir = "2.3.1"

qrcode = { version = "0.12.0", default-features = false, optional = true }
regex = { version = "1.3.6", default-features = false, optional = true }

[features]
default = ["otp"]
otp = ["regex", "qrcode"]

[profile.release]
lto = true
debug = 1
# incremental = false
